# cpp-examples

asimp/: CMakeLists.txt
asimp/myCode/src/: main.cpp
assimp-example/: CMakeLists.txt
assimp-example/dependencies/: CMakeLists.txt
assimp-example/myCode/: CMakeLists.txt
assimp-example/myCode/src/: main.cpp
assimp-example/resources/: suzanne.mtl
